app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-petclinic
  namespace: petclinic-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-petclinic
  template:
    metadata:
      labels:
        app: devsecops-petclinic
    spec:
      containers:
        - name: devsecops-petclinic
          image: 038462753889.dkr.ecr.us-east-1.amazonaws.com/devsecops-petclinic:latest
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "700m"
              memory: "1Gi"
