app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-petclinic-service
  namespace: petclinic-dev
spec:
  type: ClusterIP
  selector:
    app: devsecops-petclinic
  ports:
    - port: 8080
      targetPort: 8080
