app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-petclinic-ingress
  namespace: petclinic-dev
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops-petclinic-service
                port:
                  number: 8080
